Add create-batch endpoint
